# kivas-wikibot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
browser-extension/: README.md  background.js  manifest.json  popup.html  popup.js
wikifur_bot/: __init__.py  cf_sync.py  cli.py  client.py  sync_events.py
