[project]
name = "wikifur-bot"
version = "0.1.0"
description = "Maintenance bot for pt.wikifur.com"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mwclient>=0.11.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
bot = "wikifur_bot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wikifur_bot"]

[tool.ruff]
line-length = 120
